examples/good/05-03-if.dog
if (true) {
    yeet "yay";
    return 10;
}