examples/bad/12-04-condition-mismatch-type.dog
if (2 + 2) {
    return 5;
}